fixed layout issues

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -56,7 +56,7 @@ $bp-small: 37.5em;
     border-radius: 0.2rem;
     @media only screen and (max-width: $bp-medium) {
       font-size: 2rem;
-      // width: 40%;
+      width: 24rem;
     }
   }
   input:focus-visible {
@@ -72,8 +72,8 @@ $bp-small: 37.5em;
     border-radius: 0.2rem;
     padding: 0.3rem;
     @media only screen and (max-width: $bp-medium) {
-      font-size: 2rem;
-      width: 18rem;
+      font-size: 1.5rem;
+      width: 24rem;
     }
     &:focus-visible {
       outline: none;
